--- a/indexdemo.html
+++ b/indexdemo.html
@@ -70,7 +70,7 @@
       <!--Modal mobile menu-->
       <div class="menu-container js-menu-container" id="mobile-menu">
         <div class="modal-page-menu">
-          <button type="button" class="button-close-menu js-close-menu">
+          <button type="button" class="but">
             <svg class="close-back" width="8" height="8">
               <use href="./images/icons.svg#icon-close-black"></use>
             </svg>
